# azure-group-controller

./: .editorconfig  .env-example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
.github/workflows/: build-n-release.yaml  trigger-chart-build.yaml
az_group_crd/: Cargo.toml
az_group_crd/src/: lib.rs
az_group_manager/: Cargo.toml
az_group_manager/src/: main.rs
az_group_manager/src/controller/: azure.rs  azure_group_manager_crd.rs  azure_group_members.rs  error.rs  k8s.rs  mod.rs  reconciler.rs
az_group_manager_crd/: Cargo.toml
az_group_manager_crd/src/: lib.rs
chart/: Chart.yaml  values.yaml
chart/crds/: crds.yaml
chart/templates/: cluster-role-binding.yaml  cluster-role.yaml  deployment.yaml  service-account.yaml
