[package]
name = "az_group_crd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.92", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }
serde = { version = "1.0.204", features = ["rc"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
schemars = "0.8.21"
