[package]
name = "az-group-manager"
version = "0.1.0"
edition = "2021"
description = "Fetch members from Azure AD groups and populate the result to an AzureGroup resource."
authors = ["Patrick Kerwood <patrick@kerwood.dk>"]

[dependencies]
az_group_crd = { path = "../az_group_crd/"}
az_group_manager_crd = { path = "../az_group_manager_crd/"}
clap = { version = "4.5", features = ["derive", "env"] }
kube = { version = "0.92", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }
futures = "0.3.30"
thiserror = "1.0.61"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
azure_core = "0.20.0"
azure_identity = { version = "0.20.0", features = ["enable_reqwest_rustls"] }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.2"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
serde = { version = "1.0.204", features = ["rc"] }
serde_derive = "1.0.204"
schemars = "0.8.21"
slug = "0.1.5"
