[package]
name = "az-group-manager"
version = "0.1.0"
edition = "2021"
description = "Fetch members from Azure AD groups and populate the result to an AzureGroup resource."
authors = ["Patrick Kerwood <patrick@kerwood.dk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az_group_crd = { path = "../az_group_crd/"}
az_group_manager_crd = { path = "../az_group_manager_crd/"}
clap = { version = "4.5", features = ["derive", "env"] }
kube = { version = "0.90", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
futures = "0.3.30"
thiserror = "1.0.59"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
azure_core = "0.20.0"
azure_identity = { version = "0.20.0", features = ["enable_reqwest_rustls"] }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
serde = { version = "1.0.200", features = ["rc"] }
serde_derive = "1.0.200"
schemars = "0.8.17"
slug = "0.1.5"
openssl = { version = "0.10.64", features = ["vendored"] }
